--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "preview": "vite preview --port 5050"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.7.2",
+    "admin-lte": "^4.0.0-beta3",
+    "bootstrap": "^5.3.3",
     "chart.js": "^4.4.7",
     "json-server": "^0.17.0",
     "moment": "^2.29.4",
